--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <div class="container" id="form-holder">
-<form class="form-horizontal" data-validate="xx">
+<form class="form-horizontal" data-validate="xx" action="/he.html">
 <div class="form-group">
         <span class="col-sm-3">
             <label for="name" class="">aDD :</label>
@@ -38,6 +38,12 @@
         <label for="age" class="col-sm-3">Age :</label>
         <span class="col-sm-9">
             <input name="age" type="text" id="age" class="form-control" data-validate="not empty,number,minLength(3),maxLength(5)"/>
+        </span>
+    </div>
+    <div class="form-group">
+        <label for="details" class="col-sm-3">Details :</label>
+        <span class="col-sm-9">
+            <textarea name="details" type="text" id="details" class="form-control" data-validate="not empty,number,minLength(3),maxLength(5)"></textarea>
         </span>
     </div>
     <input type="submit" />
